Switch wallpaper and login style

--- a/less/barnetSkin.less
+++ b/less/barnetSkin.less
@@ -9,7 +9,7 @@
 @tertiary-color: @black;
 
 .module-user.location-login {
-  background-image: url(https://www.barnetfc.com/contentassets/90a6c53c6ba1462cb9a505ba18f7e9f5/dji_0006.jpg/Large);
+  background-image: url(https://www.clubsfromabove.com/static/img/photos/barnet/the_hive_stadium/aerial_photo_of_barnet_the_hive_stadium_200503202912_w1500.jpg);
 }
 
 .navigation {
@@ -44,4 +44,9 @@
 
 .modal .modal-popup-toolbar button {
   color: inherit;
+}
+
+.module-user .login-fields .login-input-username, 
+.module-user .login-fields .login-input-password {
+  background-color: fade(@black, 40%);
 }
