Switch to local assets

--- a/less/barnetSkin.less
+++ b/less/barnetSkin.less
@@ -9,7 +9,7 @@
 @tertiary-color: @black;
 
 .module-user.location-login {
-  background-image: url(https://www.barnetfc.com/contentassets/90a6c53c6ba1462cb9a505ba18f7e9f5/dji_0006.jpg/Large);
+  background-image: url(assets/background.jpg);
 }
 
 .navigation {
@@ -18,7 +18,7 @@
 }
 
 .navigation-bg {
-  background: url(https://www.barnetfc.com/siteassets/headers-and-footers/efl_watermark_logos_cropped_barnet.png) @amber no-repeat left/contain;
+  background: url(assets/logo.webp) @amber no-repeat left/contain;
 }
 
 .navigation-product-name {
